# board-game-simulator-python

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
scripts/: benchmark.py
src/: common.hpp  game.hpp  main.cpp  module.cpp  object.hpp
src/simulator/game/: __init__.py  bounce.cpp  bounce.pyi  connect.cpp  connect.pyi  helper.hpp  json.hpp  module.cpp  protocol.py  tensor.hpp
src/simulator/textual/: __init__.py  bounce.py  connect.py
src/simulator/textual/examples/: agent.py  arena.py
tests/: test_bounce.py  test_chinese_checkers.py  test_connect.py  test_connect4.py
