[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=1.3.2", "numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "RelWithDebInfo"

[project]
name = "simulator"
version = "0.0.5"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
extend-select = [
    "W605",    # pycodestyle: invalid-escape-sequence
    "S102",    # flake8-bandit: exec-builtin
    "INP",     # flake8-no-pep420
    "PYI",     # flake8-pyi
    "PT",      # flake8-pytest-style
    "PGH",     # pygrep-hooks
    "PL",      # Pylint
    "NPY",     # NumPy-specific rules
    "RUF",     # Ruff-specific rules
]
ignore = [
    "NPY002",  # numpy-legacy-random
    "PLR2004", # magic-value-comparison
    "PLW2901", # redefined-loop-name
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["INP001"]
"[!t][!e][!s][!t][!s]*/**" = ["PT"]
